# nio-15-stand

./: .gitignore  .gitmodules  README.md  firmware.rar
bootloader/: CMakeLists.txt  main.c  main.cpp  upload.py
build-gcs-Desktop_Qt_5_4_2_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.gcs.Debug  object_script.gcs.Release  ui_mainwindow.h
build-gcs-Desktop_Qt_5_4_2_MinGW_32bit-Debug/debug/: moc_connection.cpp  moc_control.cpp  moc_encoders.cpp  moc_loader.cpp  moc_logger.cpp  moc_magnetometervisualiser.cpp  moc_mainwindow.cpp  moc_plot.cpp  moc_qcustomplot.cpp  moc_serial.cpp  moc_servos.cpp  moc_visualisation.cpp  qrc_img.cpp
documentation/board/: SERVO-1.docx  Краткое техническое описание.docx  Пояснительная записка.docx
firmware/: CMakeLists.txt  README.md  board.h  main.c  main.cpp  test.cpp  test_new.cpp
firmware/app/: encoder.c  encoder.cpp  imu.c  imu.cpp  nav.c  nav.cpp  servo.c  servo.cpp  user.c  user_func_L1Cntrl_4.c  user_func_RBF_127_150819.c  user_func_RBF_127_150819.cpp  user_func_RobustCntrl_Integr.c
firmware/app/include/: app.h  encoder.h  imu.h  matrix.h  nav.h  servo.h
firmware/board/F415/: board.c  board.cmake  board.h  halconf.h  mcuconf.h
firmware/board/NoNameChina_STM32F103/: board.cmake  board.h  halconf.h
firmware/board/servo-1/: STM32F405xG.ld  STM32F405xG_bootloader - Copy.ld  STM32F405xG_bootloader.ld  board.c  board.h  chconf.h  halconf.h  mcuconf.h  openocd.cfg
firmware/configs/gdb/: gdb_debug.txt  gdb_debug.txt.in  gdb_load.txt.in  gdbinit.txt
firmware/driver/: Battery.cpp  Battery.h  Led.cpp  Led.h  Link.cpp  Link.h  Ls7366.cpp  PWM.cpp  PWM.h  Pwm.cpp  Pwm.h  adis16488.c  adis16488.cpp  flash.c  flash.cpp  ls7366.c
firmware/driver/include/: adis16488.h  driver.h  flash.h  ls7366.h
firmware/system/: Connection.cpp  Connection.h  FileSystem.cpp  PubSub.cpp  Serial.cpp  Serial.h  Terminal.cpp  connection.cpp  control.c  control.cpp  gcs.c  io.c  io.cpp  log.cpp  parameter.cpp  settings.cpp  telemetry.cpp  thread.cpp
firmware/system/include/: FileSystem.h  PubSub.h  Terminal.h  connection.h  control.h  gcs.h  io.h  log.h  mavlink_bridge_header.h  parameter.h  settings.h  system.h  telemetry.h  thread.h  usbcfg.h
gcs/: encoder.csv  gcs.pro  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gcs/board/: control.cpp  encoders.cpp  loader.cpp  settings.cpp
gcs/board/include/: control.h  encoders.h  loader.h  servos.h  settings.h
gcs/connection/: connection.cpp  connection.h  logger.cpp  serial.cpp
gcs/connection/include/: connection.h  logger.h  mavlink_bridge_header.h  serial.h
gcs/control/: control.cpp  control.h
gcs/encoders/: encoders.cpp  encoders.h
gcs/loader/: loader.cpp  loader.h
gcs/logger/: logger.h
gcs/plot/: plot.cpp  plot.h
gcs/serial/: serial.h
gcs/servos/: servos.cpp  servos.h
gcs/ui/: magnetometervisualiser.cpp  plot.cpp  visualisation.cpp
gcs/ui/include/: magnetometervisualiser.h  plot.h  visualisation.h
gcs/visualisation/: visualisation.cpp  visualisation.h
simulator/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.h  simulator.pro  user_func_L1Cntrl.c  user_func_NN_2015_03_23.c  user_func_NN_2015_03_31.c  user_func_NN_2015_03_31_2.c  user_func_NN_2015_04_01.cpp  user_func_RBF_127_150819.c
simulator/calculator/: calculator.cpp  calculator.h
